# pi-code-live-index

./: .gitignore  README.md  SPEC.md  index.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: postgres-runtime.md
docs/architecture/: ast-aware-semantic-search-plan.md  ast-aware-semantic-search-spec.md  call-graph-impact-plan.md  call-graph-impact-spec.md  daemon-live-ops-plan.md  daemon-live-ops-spec.md  final-integration-plan.md  final-integration-spec.md  find-similar-code-one-shot-plan.md  find-similar-code-one-shot-spec.md  psql-first-e2e-validation-plan.md  psql-first-e2e-validation-spec.md  psql-first-runtime-layout-plan.md  psql-first-runtime-layout-spec.md  psql-first-setup-ux-plan.md  psql-first-setup-ux-spec.md  psql-runtime-assets-move-plan.md  psql-runtime-assets-move-spec.md  repo-quality-context-plan.md  repo-quality-context-spec.md  symbol-intelligence-plan.md  symbol-intelligence-spec.md
examples/: compose.pgvector.yml  global-config.yml  podman-pgvector.sh  project-settings.yml
runtime/postgres/: compose.pgvector.yml  podman-pgvector.sh
scripts/: setup.sh
src/pi_code_index/: __init__.py  backend.py  cli.py  coco_app.py  coco_backend.py  config.py  context_tools.py  daemon.py  indexer.py  setup_checks.py
tests/: format-results.test.ts  test_canonical_foundation.py  test_cli_exit_codes.py  test_cli_symbols.py  test_coco_backend_perf_guards.py  test_cocoindex_postgres_integration.py  test_context_tools.py  test_daemon_lifecycle.py  test_indexer.py  test_setup_checks.py
types/: pi-coding-agent.d.ts
